--- a/files/en-us/web/performance/how_browsers_work/index.html
+++ b/files/en-us/web/performance/how_browsers_work/index.html
@@ -14,9 +14,9 @@ tags:
   - Web Performance
   - render
 ---
-<p>Users want web experiences with content that is fast to load and smooth to interact with. Therefore, <span class="seoSummary">a developer should strive to achieve these two goals. </span></p>
+<p>Users want web experiences with content that is fast to load and smooth to interact with. Therefore, a developer should strive to achieve these two goals.</p>
 
-<p><span class="seoSummary">To understand how to improve performance and perceived performance, it helps to understand how the browser works.</span></p>
+<p>To understand how to improve performance and perceived performance, it helps to understand how the browser works.</p>
 
 <h2 id="Overview">Overview</h2>
 
@@ -100,7 +100,7 @@ tags:
 
 <h3 id="Congestion_control">Congestion control</h3>
 
-<p><span style="font-weight: 400;">As the server sends data in TCP packets, the user's client confirms delivery by returning acknowledgements, or ACKs. The connection has a limited capacity depending on hardware and network conditions. If the server sends too many packets too quickly, they will be dropped. Meaning, there will be no acknowledgement. The server registers this as missing ACKs. Congestion control algorithms use this flow of sent packets and ACKs to determine a send rate.</span></p>
+<p>As the server sends data in TCP packets, the user's client confirms delivery by returning acknowledgements, or ACKs. The connection has a limited capacity depending on hardware and network conditions. If the server sends too many packets too quickly, they will be dropped. Meaning, there will be no acknowledgement. The server registers this as missing ACKs. Congestion control algorithms use this flow of sent packets and ACKs to determine a send rate.</p>
 
 <h2 id="Parsing">Parsing</h2>
 
