--- a/files/en-us/web/performance/lazy_loading/index.html
+++ b/files/en-us/web/performance/lazy_loading/index.html
@@ -12,7 +12,7 @@ tags:
   - Web Performance
   - rendering
 ---
-<p><span class="seoSummary"><strong>Lazy loading</strong> is a strategy to identify resources as non-blocking (non-critical) and load these only when needed. It's a way to shorten the length of the <a href="/en-US/docs/Web/Performance/Critical_rendering_path">critical rendering path</a>, which translates into reduced page load times.</span></p>
+<p><strong>Lazy loading</strong> is a strategy to identify resources as non-blocking (non-critical) and load these only when needed. It's a way to shorten the length of the <a href="/en-US/docs/Web/Performance/Critical_rendering_path">critical rendering path</a>, which translates into reduced page load times.</p>
 
 <p>Lazy loading can occur on different moments in the application, but it typically happens on some user interactions such as scrolling and navigation. </p>
 
@@ -30,7 +30,7 @@ tags:
 
 <h3 id="General">General</h3>
 
-<p id="Code_splitting"><strong>Code splitting</strong><br>
+<p><strong>Code splitting</strong><br>
  JavaScript, CSS and HTML can be split into smaller chunks. This enables sending the minimal code required to provide value upfront, improving page-load times. The rest can be loaded on demand.</p>
 
 <ul>
