--- a/files/en-us/web/performance/performance_budgets/index.html
+++ b/files/en-us/web/performance/performance_budgets/index.html
@@ -9,7 +9,7 @@ tags:
 ---
 <p>{{draft}}</p>
 
-<p><span class="seoSummary">A performance budget is a limit to prevent regressions. It can apply to a file, a file type, all files loaded on a page, a specific metric (e.g. <a href="/en-US/docs/Glossary/Time_to_interactive">Time to Interactive</a>), a custom metric (e.g. Time to Hero Element), or a threshold over a period of time.   </span></p>
+<p>A performance budget is a limit to prevent regressions. It can apply to a file, a file type, all files loaded on a page, a specific metric (e.g. <a href="/en-US/docs/Glossary/Time_to_interactive">Time to Interactive</a>), a custom metric (e.g. Time to Hero Element), or a threshold over a period of time.</p>
 
 <h2 id="Why_do_I_need_a_performance_budget">Why do I need a performance budget?</h2>
 
