--- a/files/en-us/web/performance/dns-prefetch/index.html
+++ b/files/en-us/web/performance/dns-prefetch/index.html
@@ -5,7 +5,7 @@ tags:
   - Web Performance
   - dns-prefetch
 ---
-<p><span class="seoSummary"><code><strong>DNS-prefetch</strong></code> is an attempt to resolve domain names before resources get requested. This could be a file loaded later or link target a user tries to follow.</span></p>
+<p><code><strong>DNS-prefetch</strong></code> is an attempt to resolve domain names before resources get requested. This could be a file loaded later or link target a user tries to follow.</p>
 
 <h2 id="Why_use_dns-prefetch">Why use dns-prefetch?</h2>
 
@@ -36,13 +36,13 @@ tags:
 
 <h2 id="Best_practices">Best practices</h2>
 
-<p id="Three_things_to_keep_in_mind">There are 3 main things to keep in mind:</p>
+<p>There are 3 main things to keep in mind:</p>
 
 <p><strong>For one</strong>, <code>dns-prefetch</code> is only effective for DNS lookups on <a href="/en-US/docs/Web/HTTP/CORS">cross-origin</a> domains, so avoid using it to point to your site or domain. This is because the IP behind your site’s domain will have already been resolved by the time the browser sees the hint.</p>
 
 <p><strong>Second</strong>, it’s also possible to specify <code>dns-prefetch</code> (and other resources hints) as an <a href="/en-US/docs/Web/HTTP/Headers">HTTP header</a> by using the <a href="/en-US/docs/Web/HTTP/Headers/Link">HTTP Link field</a>:</p>
 
-<pre class="brush: unix">Link: &lt;https://fonts.googleapis.com/&gt;; rel=dns-prefetch</pre>
+<pre class="brush: plain">Link: &lt;https://fonts.googleapis.com/&gt;; rel=dns-prefetch</pre>
 
 <p><strong>Third</strong>, consider pairing <code>dns-prefetch</code> with the <code>preconnect</code> hint. While <code>dns-prefetch</code> only performs a DNS lookup, <code>preconnect</code> establishes a connection to a server. This process includes DNS resolution, as well as establishing the TCP connection, and performing the <a href="/en-US/docs/Glossary/TLS">TLS</a> handshake—if a site is served over HTTPS. Combining the two provides an opportunity to further reduce the perceived latency of <a href="/en-US/docs/Web/HTTP/CORS">cross-origin requests</a>. You can safely use them together like so:</p>
 
@@ -51,7 +51,7 @@ tags:
 </pre>
 
 <div class="notecard note">
-<p><strong>Note</strong>: If a page needs to make connections to many third-party domains, preconnecting them all is counterproductive. The <code>preconnect</code> hint is best used for only the most critical connections. For the others, just use <code>&lt;link rel="dns-prefetch"&gt;</code> to save time on the first step — the DNS lookup.</p>
+<p><strong>Note:</strong> If a page needs to make connections to many third-party domains, preconnecting them all is counterproductive. The <code>preconnect</code> hint is best used for only the most critical connections. For the others, just use <code>&lt;link rel="dns-prefetch"&gt;</code> to save time on the first step — the DNS lookup.</p>
 </div>
 
 <p>The logic behind pairing these hints is because support for dns-prefetch is better than support for preconnect. Browsers that don’t support preconnect will still get some added benefit by falling back to dns-prefetch. Because this is an HTML feature, it is very fault-tolerant. If a non-supporting browser encounters a dns-prefetch hint—or any other resource hint—your site won’t break. You just won’t receive the benefits it provides.</p>
