--- a/files/en-us/web/security/index.html
+++ b/files/en-us/web/security/index.html
@@ -6,8 +6,7 @@ tags:
   - Security
   - Web
 ---
-<div class="summary">
-<p>Ensuring that your website or open web application is secure is critical. Even simple bugs in your code can result in private information being leaked, and bad people are out there trying to find ways to steal data. <span class="seoSummary">The web security-oriented articles listed here provide information that may help you secure your site and its code from attacks and data theft.</span></p>
+<p>Ensuring that your website or open web application is secure is critical. Even simple bugs in your code can result in private information being leaked, and bad people are out there trying to find ways to steal data. The web security-oriented articles listed here provide information that may help you secure your site and its code from attacks and data theft.</p>
 </div>
 
 <h2 id="Content_security">Content security</h2>
@@ -79,7 +78,7 @@ tags:
 
 <h2 id="Clickjacking_protection">Clickjacking protection</h2>
 
-<p id="sect1">In clickjacking, a user is fooled into clicking on a UI element that performs some action other than what the user expects. </p>
+<p>In clickjacking, a user is fooled into clicking on a UI element that performs some action other than what the user expects. </p>
 
 <dl>
  <dt><a href="/en-US/docs/Web/HTTP/Headers/X-Frame-Options">HTTP X-Frame-Options</a></dt>
