--- a/files/en-us/web/security/same-origin_policy/index.html
+++ b/files/en-us/web/security/same-origin_policy/index.html
@@ -13,7 +13,7 @@ tags:
 ---
 <div>{{QuickLinksWithSubpages("/en-US/docs/Web/Security")}}</div>
 
-<p><span class="seoSummary">The <strong>same-origin policy</strong> is a critical security mechanism that restricts how a document or script loaded by one {{Glossary("origin")}} can interact with a resource from another origin.</span></p>
+<p>The <strong>same-origin policy</strong> is a critical security mechanism that restricts how a document or script loaded by one {{Glossary("origin")}} can interact with a resource from another origin.</p>
 
 <p>It helps isolate potentially malicious documents, reducing possible attack vectors. For example, it prevents a malicious website on the Internet from running JS in a browser to read data from a third-party webmail service (which the user is signed into) or a company intranet (which is protected from direct access by the attacker by not having a public IP address) and relaying that data to the attacker.</p>
 
@@ -62,13 +62,9 @@ tags:
 
 <p>Scripts executed from pages with an <code>about:blank</code> or <code>javascript:</code> URL inherit the origin of the document containing that URL, since these types of URLs do not contain information about an origin server.</p>
 
-<div class="note">
 <p>For example, <code>about:blank</code> is often used as a URL of new, empty popup windows into which the parent script writes content (e.g. via the {{domxref("Window.open()")}} mechanism). If this popup also contains JavaScript, that script would inherit the same origin as the script that created it.</p>
-</div>
 
-<div class="warning">
 <p><code>data:</code> URLs get a new, empty, security context.</p>
-</div>
 
 <h3 id="Exceptions_in_Internet_Explorer">Exceptions in Internet Explorer</h3>
 
@@ -86,7 +82,7 @@ tags:
 <h2 id="Changing_origin">Changing origin</h2>
 
 <div class="notecard warning">
-<p>The approach described here (using the {{domxref("document.domain")}} setter) is deprecated because it undermines the security protections provided by the same origin policy, and complicates the origin model in browsers, leading to interoperability problems and security bugs.</p>
+<p><strong>Warning:</strong> The approach described here (using the {{domxref("document.domain")}} setter) is deprecated because it undermines the security protections provided by the same origin policy, and complicates the origin model in browsers, leading to interoperability problems and security bugs.</p>
 </div>
 
 <p>A page may change its own origin, with some limitations. A script can set the value of {{domxref("document.domain")}} to its current domain or a superdomain of its current domain. If set to a superdomain of the current domain, the shorter superdomain is used for same-origin checks.</p>
@@ -152,7 +148,7 @@ tags:
 
 <p>The following cross-origin access to these <code>Window</code> properties is allowed:</p>
 
-<table class="fullwidth-table standard-table">
+<table>
  <thead>
   <tr>
    <th scope="col">Methods</th>
@@ -174,7 +170,7 @@ tags:
  </tbody>
 </table>
 
-<table class="fullwidth-table standard-table">
+<table>
  <thead>
   <tr>
    <th scope="col">Attributes</th>
@@ -227,7 +223,7 @@ tags:
 
 <p>The following cross-origin access to <code>Location</code> properties is allowed:</p>
 
-<table class="fullwidth-table standard-table">
+<table>
  <thead>
   <tr>
    <th scope="col">Methods</th>
@@ -240,7 +236,7 @@ tags:
  </tbody>
 </table>
 
-<table class="fullwidth-table standard-table">
+<table>
  <thead>
   <tr>
    <th scope="col">Attributes</th>
@@ -270,10 +266,4 @@ tags:
  <li><a href="https://web.dev/secure/same-origin-policy">Same-origin policy at web.dev</a></li>
  <li>{{httpheader("Cross-Origin-Resource-Policy")}}</li>
  <li>{{httpheader("Cross-Origin-Embedder-Policy")}}</li>
-</ul>
-
-<h2 id="Original_Document_Information">Original Document Information</h2>
-
-<ul>
- <li>Author(s): Jesse Ruderman</li>
 </ul>
