--- a/files/en-us/web/security/secure_contexts/index.html
+++ b/files/en-us/web/security/secure_contexts/index.html
@@ -52,12 +52,14 @@ tags:
 <h2 id="Specifications">Specifications</h2>
 
 <table class="standard-table">
+ <thead>
+   <tr>
+    <th>Specification</th>
+    <th>Status</th>
+    <th>Comment</th>
+   </tr>
+ </thead>
  <tbody>
-  <tr>
-   <td>Specification</td>
-   <td>Status</td>
-   <td>Comment</td>
-  </tr>
   <tr>
    <td>{{SpecName('Secure Contexts')}}</td>
    <td>{{Spec2('Secure Contexts')}}</td>
