--- a/files/en-us/web/security/subresource_integrity/index.html
+++ b/files/en-us/web/security/subresource_integrity/index.html
@@ -8,10 +8,10 @@ tags:
   - Networking
   - Security
 ---
-<p><span class="seoSummary"><strong>Subresource Integrity</strong> (SRI) is a security feature that enables browsers to verify that resources they fetch (for example, from a <a href="/en-US/docs/Glossary/CDN">CDN</a>) are delivered without unexpected manipulation. It works by allowing you to provide a cryptographic hash that a fetched resource must match.</span></p>
+<p><strong>Subresource Integrity</strong> (SRI) is a security feature that enables browsers to verify that resources they fetch (for example, from a <a href="/en-US/docs/Glossary/CDN">CDN</a>) are delivered without unexpected manipulation. It works by allowing you to provide a cryptographic hash that a fetched resource must match.</p>
 
 <div class="note">
-<p><strong>Note</strong>: For subresource-integrity verification of a resource served from an origin other than the document in which it’s embedded, browsers additionally check the resource using <a href="/en-US/docs/Web/HTTP/CORS">Cross-Origin Resource Sharing (CORS)</a>, to ensure the origin serving the resource allows it to be shared with the requesting origin.</p>
+<p><strong>Note:</strong> For subresource-integrity verification of a resource served from an origin other than the document in which it’s embedded, browsers additionally check the resource using <a href="/en-US/docs/Web/HTTP/CORS">Cross-Origin Resource Sharing (CORS)</a>, to ensure the origin serving the resource allows it to be shared with the requesting origin.</p>
 </div>
 
 <h2 id="How_Subresource_Integrity_helps">How Subresource Integrity helps</h2>
@@ -27,7 +27,7 @@ tags:
 <p>An <code>integrity</code> value begins with at least one string, with each string including a prefix indicating a particular hash algorithm (currently the allowed prefixes are <code>sha256</code>, <code>sha384</code>, and <code>sha512</code>), followed by a dash, and ending with the actual base64-encoded hash.</p>
 
 <div class="note">
-<p><strong>Note</strong>: An <strong>integrity</strong> value may contain multiple hashes separated by whitespace. A resource will be loaded if it matches one of those hashes.</p>
+<p><strong>Note:</strong> An <strong>integrity</strong> value may contain multiple hashes separated by whitespace. A resource will be loaded if it matches one of those hashes.</p>
 </div>
 
 <p>Example <code>integrity</code> string with base64-encoded sha384 hash:</p>
@@ -38,7 +38,7 @@ tags:
 <p>So <code>oqVuAfXRKap7fdgcCY5uykM6+R9GqQ8K/uxy9rx7HNQlGYl1kPzQho1wx4JwY8wC</code> is the "hash" part, and the prefix <code>sha384</code> indicates that it's a sha384 hash.</p>
 
 <div class="note">
-<p><strong>Note</strong>: An <code>integrity</code> value's "hash" part is, strictly speaking, a <strong><em>cryptographic</em> <em>digest</em></strong> formed by applying a particular hash function to some input (for example, a script or stylesheet file). But it’s common to use the shorthand "hash" to mean <em>cryptographic</em> <em>digest</em>, so that's what's used in this article.</p>
+<p><strong>Note:</strong> An <code>integrity</code> value's "hash" part is, strictly speaking, a <strong><em>cryptographic</em> <em>digest</em></strong> formed by applying a particular hash function to some input (for example, a script or stylesheet file). But it’s common to use the shorthand "hash" to mean <em>cryptographic</em> <em>digest</em>, so that's what's used in this article.</p>
 </div>
 
 <h3 id="Tools_for_generating_SRI_hashes">Tools for generating SRI hashes</h3>
@@ -55,7 +55,7 @@ tags:
 </pre>
 
 <div class="note">
-<p><strong>Notes</strong>:</p>
+<p><strong>Note:</strong></p>
 
 <ul>
 	<li>The pipe-through-<code>xxd</code> step takes the hexadecimal output from <code>shasum</code> and converts it to binary.</li>
@@ -90,7 +90,7 @@ pause
 
 <h2 id="Examples">Examples</h2>
 
-<p>In the following examples, assume that <code id="sriSnippet">oqVuAfXRKap7fdgcCY5uykM6+R9GqQ8K/uxy9rx7HNQlGYl1kPzQho1wx4JwY8wC</code> is already known to be the expected SHA-384 hash (digest) of a particular script <code>example-framework.js</code>, and there’s a copy of the script hosted at <code>https://example.com/example-framework.js</code>.</p>
+<p>In the following examples, assume that <code>oqVuAfXRKap7fdgcCY5uykM6+R9GqQ8K/uxy9rx7HNQlGYl1kPzQho1wx4JwY8wC</code> is already known to be the expected SHA-384 hash (digest) of a particular script <code>example-framework.js</code>, and there’s a copy of the script hosted at <code>https://example.com/example-framework.js</code>.</p>
 
 <h3 id="Subresource_Integrity_with_the_&lt;script&gt;_element">Subresource Integrity with the &lt;script&gt; element</h3>
 
@@ -101,7 +101,7 @@ pause
         crossorigin="anonymous"&gt;&lt;/script&gt;</pre>
 
 <div class="note">
-<p><strong>Note</strong>: For more details on the purpose of the <code>crossorigin</code> attribute, see <a href="/en-US/docs/Web/HTML/Attributes/crossorigin">CORS settings attributes</a>.</p>
+<p><strong>Note:</strong> For more details on the purpose of the <code>crossorigin</code> attribute, see <a href="/en-US/docs/Web/HTML/Attributes/crossorigin">CORS settings attributes</a>.</p>
 </div>
 
 <h2 id="How_browsers_handle_Subresource_Integrity">How browsers handle Subresource Integrity</h2>
@@ -112,7 +112,7 @@ pause
 	<li>
 	<p>When a browser encounters a {{HTMLElement("script")}} or {{HTMLElement("link")}} element with an <code>integrity</code> attribute, before executing the script or before applying any stylesheet specified by the {{HTMLElement("link")}} element, the browser must first compare the script or stylesheet to the expected hash given in the <code>integrity</code> value.</p>
 
-	<p class="note"><strong>Note</strong>: For subresource-integrity verification of a resource served from an origin other than the document in which it’s embedded, browsers additionally check the resource using <a href="/en-US/docs/Web/HTTP/CORS">Cross-Origin Resource Sharing (CORS)</a>, to ensure the origin serving the resource allows it to be shared with the requesting origin.</p>
+	<p> For subresource-integrity verification of a resource served from an origin other than the document in which it’s embedded, browsers additionally check the resource using <a href="/en-US/docs/Web/HTTP/CORS">Cross-Origin Resource Sharing (CORS)</a>, to ensure the origin serving the resource allows it to be shared with the requesting origin.</p>
 	</li>
 	<li>If the script or stylesheet doesn’t match its associated <code>integrity</code> value, the browser must refuse to execute the script or apply the stylesheet, and must instead return a network error indicating that fetching of that script or stylesheet failed.</li>
 </ol>
@@ -152,8 +152,8 @@ pause
 <ul>
 	<li>Content Security Policy</li>
 	<li>{{httpheader("Content-Security-Policy")}}</li>
-	<li><a href="https://frederik-braun.com/using-subresource-integrity.html" id="page-title">A CDN that can not XSS you: Using Subresource Integrity</a></li>
-	<li><a href="https://w3c-test.org/subresource-integrity/subresource-integrity.html" id="w3c-test">Subresource Integrity test from W3C</a></li>
+	<li><a href="https://frederik-braun.com/using-subresource-integrity.html">A CDN that can not XSS you: Using Subresource Integrity</a></li>
+	<li><a href="https://w3c-test.org/subresource-integrity/subresource-integrity.html">Subresource Integrity test from W3C</a></li>
 	<li><a href="https://www.srihash.org/">SRI Hash Generator</a></li>
 </ul>
 
