--- a/files/en-us/web/security/transport_layer_security/index.html
+++ b/files/en-us/web/security/transport_layer_security/index.html
@@ -11,17 +11,15 @@ tags:
   - Security
   - TLS
 ---
-<p><span class="seoSummary">The security of any connection using Transport Layer Security (TLS) is heavily dependent upon the cipher suites and security parameters selected. This article's goal is to help you make these decisions to ensure the confidentiality and integrity communication between client and server.</span> The Mozilla Operations Security (OpSec) team <a href="https://wiki.mozilla.org/Security/Server_Side_TLS">maintains a wiki entry</a> with reference configurations for servers.</p>
+<p>The security of any connection using Transport Layer Security (TLS) is heavily dependent upon the cipher suites and security parameters selected. This article's goal is to help you make these decisions to ensure the confidentiality and integrity communication between client and server. The Mozilla Operations Security (OpSec) team <a href="https://wiki.mozilla.org/Security/Server_Side_TLS">maintains a wiki entry</a> with reference configurations for servers.</p>
 
-<p class="summary">The Transport Layer Security (TLS) protocol is the standard for enabling two networked applications or devices to exchange information privately and robustly. Applications that use TLS can choose their security parameters, which can have a substantial impact on the security and reliability of data. This article provides an overview of TLS and the kinds of decisions you need to make when securing your content.</p>
+<p>The Transport Layer Security (TLS) protocol is the standard for enabling two networked applications or devices to exchange information privately and robustly. Applications that use TLS can choose their security parameters, which can have a substantial impact on the security and reliability of data. This article provides an overview of TLS and the kinds of decisions you need to make when securing your content.</p>
 
 <h2 id="History">History</h2>
 
 <p>When HTTPS was introduced, it was based on Secure Sockets Layer (SSL) 2.0, a technology introduced by Netscape. It was updated to SSL 3.0 not long after, and as its usage expanded, it became clear that a common, standard encryption technology needed to be specified to ensure interoperability among all web browsers and servers. The <a href="https://www.ietf.org/">Internet Engineering Task Force</a> (IETF) specified TLS 1.0 in {{RFC(2246)}} in January, 1999. The current version of TLS is 1.3 ({{RFC(8446)}}).</p>
 
-<div class="note">
 <p>Despite the fact that the web now uses TLS for encryption, many people still refer to it as "SSL" out of habit.</p>
-</div>
 
 <p>Although TLS can be used on top of any low-level transport protocol, the original goal of the protocol was to encrypt HTTP traffic. HTTP encrypted using TLS is commonly referred to as {{Glossary("HTTPS")}}. TLS-encrypted web traffic is by convention exchanged on port 443 by default, while unencrypted HTTP uses port 80 by default. HTTPS remains an important use case for TLS.</p>
 
